fix: scope overflow on Y axis

--- a/src/components/PropositionCard/PropositionCard.scss
+++ b/src/components/PropositionCard/PropositionCard.scss
@@ -89,7 +89,7 @@
         @include card();
 
         max-height: 8rem;
-        overflow: scroll;
+        overflow-y: auto;
 
         &-title {
             color: $secondary-muted;
